--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+}
+
+.header, .hero-container{
     padding: 10px 75px;
 }
 
@@ -23,12 +26,38 @@ ul {
     gap: 15px;
 }
 
-.header, .footer {
+.hero-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header, .hero-container, .footer {
     background-color: #1F2937;
 }
 
 a {
     text-decoration: none;
+}
+
+a, .secondary-hero-text{
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.primary-hero-text{
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-button{
+    border: none;
+    color: white;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 8px 24px;
+}
+
+.hero-image{
+    width: 400px;
 }
