Initialize html and css styles for info section
Inititalized html and basic css styles for info section, including
flexbox elements for alignment. The hero image was used as a placeholder
for the info images along with some placeholder text

--- a/style.css
+++ b/style.css
@@ -62,3 +62,27 @@ a, .secondary-hero-text{
 .hero-image{
     width: 400px;
 }
+
+.info-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.info-header{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.info-image{
+    width: 50px;
+}
+
+.info-box-container{
+    display: flex;
+}
+
+.info-box{
+    display: flex;
+    flex-direction: column;
+}
