--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ a, .secondary-hero-text{
     background-color: #3882F6;
     border-radius: 10px;
     padding: 8px 24px;
+    width: 100px;
+    height: 50px;
 }
 
 .hero-image{
