Rename info-box to info-card and realign it
Renamed info-box, and everything referring to it to info-card to further
differentiate it from info-container. Also realigned the info-box and
the image size

--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ a, .secondary-hero-text{
 .info-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .info-header{
@@ -83,14 +85,18 @@ a, .secondary-hero-text{
 }
 
 .info-image{
-    width: 50px;
+    width: 150px;
+    border-radius: 20px;
 }
 
-.info-box-container{
+.info-card-container{
     display: flex;
+    gap: 40px;
 }
 
-.info-box{
+.info-card{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
