--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: "Arial", sans-serif;
 }
 
 .header {
@@ -10,7 +11,7 @@ body {
     justify-content: space-between;
 }
 
-.header, .hero-container, .info-container{
+.header, .hero-container, .info-container, .quote-container{
     padding: 10px 250px;
 }
 
@@ -91,7 +92,7 @@ a, .secondary-hero-text{
 
 .info-card-container{
     display: flex;
-    gap: 20px;
+    gap: 1px;
 }
 
 .info-card{
@@ -99,4 +100,21 @@ a, .secondary-hero-text{
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.quote-container{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote{
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-author{
+    align-self: flex-end;
 }
