--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: "Arial", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -110,11 +110,13 @@ a, .secondary-hero-text{
 
 .quote{
     font-size: 36px;
-    font-weight: 300;
+    font-weight: lighter;
     font-style: italic;
     color: #1F2937;
 }
 
 .quote-author{
     align-self: flex-end;
+    font-size: 18px;
+    color: #1F2937;
 }
