--- a/style.css
+++ b/style.css
@@ -130,3 +130,14 @@ a, .secondary-hero-text{
     color: #F9FAF8;
     border-radius: 5px;
 }
+
+.call-button{
+    border: 2px;
+    border-color: white;
+    color: white;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 8px 24px;
+    width: 100px;
+    height: 50px;   
+}
