Center call-container
Centered call-container using the flexbox justify-content: center and
align-items: center

--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ a, .secondary-hero-text{
 
 .call-container{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .call{
