Align call to action
Aligned call to action utilizing flexboxs justify content: center and
align-items: space-between. Also added a top and bottom padding of 5px
and a left and right padding of 100px to the call.

--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ a, .secondary-hero-text{
     background-color: #3882F6;
     color: #F9FAF8;
     border-radius: 5px;
+    flex: 1;
+    padding: 5px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .call-button{
