--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ a, .secondary-hero-text{
     height: 50px;
 }
 
+.hero-button:hover{
+    background-color: white;
+    color: #3882F6;
+}
+
 .hero-image{
     width: 400px;
 }
@@ -139,12 +144,16 @@ a, .secondary-hero-text{
 }
 
 .call-button{
-    border: 2px;
-    border-color: white;
+    border: 2px solid white;
     color: white;
     background-color: #3882F6;
     border-radius: 10px;
     padding: 8px 24px;
     width: 100px;
     height: 50px;   
+}
+
+.call-button:hover{
+    background-color: white;
+    color: #3882F6;
 }
