Add CSS styling to the footer & align it
Added CSS styling to the footer, including a white text and 20px padding
and aligned the footer using flexboxs justify-content: center

--- a/style.css
+++ b/style.css
@@ -157,3 +157,10 @@ a, .secondary-hero-text{
     background-color: white;
     color: #3882F6;
 }
+
+.footer{
+    display: flex;
+    justify-content: center;
+    color: #E5E7EB;
+    padding: 20px;
+}
