--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ a, .secondary-hero-text{
 
 .quote{
     font-size: 36px;
-    font-weight: lighter;
+    font-weight: 100;
     font-style: italic;
     color: #1F2937;
 }
