--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: roboto, Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -115,7 +115,7 @@ a, .secondary-hero-text{
 
 .quote{
     font-size: 36px;
-    font-weight: 100;
+    font-weight: 300;
     font-style: italic;
     color: #1F2937;
 }
