--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ a, .secondary-hero-text{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .call-button{
