Center .hero-container
Centered .hero-container using justify-contents: center

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul {
 
 .hero-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .header, .hero-container, .footer {
