Change title, hero-logo, and quote content
Changed the title, hero-logo-, and quote content to match the chosen
fictitious business for this landing page. Also added some gap to
.hero-text

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a, .secondary-hero-text{
     flex-direction: column;
     justify-content: center;
     max-width: 40%;
+    gap: 10px;
 }
 
 .hero-button{
