--- a/style.css
+++ b/style.css
@@ -6,6 +6,31 @@ body {
     font-family: roboto, Arial, Helvetica, sans-serif;
 }
 
+.header-logo, .primary-hero-text, .call {
+    color: #F9FAF8;
+}
+
+a, .secondary-hero-text, .footer {
+    color: #E5E7EB;
+}
+
+.header, .hero-container, .footer {
+    background-color: #1F2937;
+}
+
+.hero-button, .call-button {
+    color: white;
+}
+
+.hero-button, .call, .call-button {
+    background-color: #3882F6;
+}
+
+.hero-button:hover, .call-button:hover {
+    background-color: white;
+    color: #3882F6;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -16,7 +41,6 @@ body {
 }
 
 .header-logo {
-    color: #F9FAF8;
     font-size: 24px;
 }
 
@@ -33,21 +57,15 @@ ul {
     justify-content: space-between;
 }
 
-.header, .hero-container, .footer {
-    background-color: #1F2937;
-}
-
 a {
     text-decoration: none;
 }
 
 a, .secondary-hero-text{
-    color: #E5E7EB;
     font-size: 18px;
 }
 
 .primary-hero-text{
-    color: #F9FAF8;
     font-size: 48px;
     font-weight: 900;
 }
@@ -62,17 +80,10 @@ a, .secondary-hero-text{
 
 .hero-button{
     border: none;
-    color: white;
-    background-color: #3882F6;
     border-radius: 10px;
     padding: 8px 24px;
     width: 100px;
     height: 50px;
-}
-
-.hero-button:hover{
-    background-color: white;
-    color: #3882F6;
 }
 
 .hero-image{
@@ -141,8 +152,6 @@ a, .secondary-hero-text{
 }
 
 .call{
-    background-color: #3882F6;
-    color: #F9FAF8;
     border-radius: 5px;
     flex: 1;
     padding: 5px 100px;
@@ -154,22 +163,14 @@ a, .secondary-hero-text{
 
 .call-button{
     border: 2px solid white;
-    color: white;
-    background-color: #3882F6;
     border-radius: 10px;
     padding: 8px 24px;
     width: 100px;
     height: 50px;   
 }
 
-.call-button:hover{
-    background-color: white;
-    color: #3882F6;
-}
-
 .footer{
     display: flex;
     justify-content: center;
-    color: #E5E7EB;
     padding: 20px;
 }
