--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ a, .secondary-hero-text, .footer {
     color: #E5E7EB;
 }
 
+
+.info-header, .quote, .quote-author {
+    color: #1F2937;
+}
+
 .header, .hero-container, .footer {
     background-color: #1F2937;
 }
@@ -100,7 +105,6 @@ a, .secondary-hero-text{
 .info-header{
     font-size: 36px;
     font-weight: 900;
-    color: #1F2937;
     text-align: center;
 }
 
@@ -136,13 +140,11 @@ a, .secondary-hero-text{
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
-    color: #1F2937;
 }
 
 .quote-author{
     align-self: flex-end;
     font-size: 18px;
-    color: #1F2937;
 }
 
 .call-container{
