Change size and alignment of info images
Changed the size of info images by increasing the width to 200px and
changed the justify-content to space-between and increased the gap of
.info-card-container. Also updated README.md with an updated
description and updated photo credits

--- a/style.css
+++ b/style.css
@@ -109,16 +109,16 @@ a, .secondary-hero-text{
 }
 
 .info-image{
-    width: 150px;
+    width: 200px;
     min-width: 50px;
     border-radius: 20px;
 }
 
 .info-card-container{
     display: flex;
-    gap: 40px;
+    gap: 60px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .info-card{
