--- a/style.css
+++ b/style.css
@@ -158,9 +158,11 @@ a, .secondary-hero-text{
     flex: 1;
     padding: 5px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    text-align: center;
+    gap: 20px;
 }
 
 .call-button{
